update the demo page for mobile testing

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,10 +6,10 @@
 		<script src="underscore-min.js"></script>
 		<script src="../dist/jquery.password-validator.js"></script>
 		<link rel="stylesheet" href="../dist/jquery-password-validator.css"></link>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
-	<body style="padding:10rem;">
-
-		<div>
+	<body>
+		<div style="max-width: 300px; margin: 250px auto 0; text-align: center;" >
 			<label style="display:block;">Password</label>
 			<input type="password" id="password">
 		</div>
